# moi

./: .gitignore  README.md  cryostation_ping.py  cryostation_stabilize.py  moi-env.yml  moi_acquire.py  multi_H_fc_w_cali.ps1  pyproject.toml
scripts/: moi_fczfc_cycling_calibration.ps1  moi_zfc_tsweep.ps1  multi_T_zfc.ps1  single_fc.ps1
src/moi_control/: __init__.py  acquisition.py  calibration_db.py  config.py  postprocess.py  psu_registry.py
src/moi_control/cli/: __init__.py  acquire.py  calibrate.py
src/moi_control/experiments/: __init__.py  calibrate.py  fc.py  fczfc.py  tsweep.py  zfc.py
src/moi_control/instruments/: __init__.py  camera.py  cryostat.py  magnet.py
